--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings":{
+    "Token": "Super sceret key"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=Getyourta.db"
   },
