--- a/backend.csproj
+++ b/backend.csproj
@@ -8,5 +8,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3"/>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.3"/>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.5.1"/>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.1"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3"/>
   </ItemGroup>
 </Project>
