--- a/appsettings.json
+++ b/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "cloudinarySettings"{
+    "CloudName": "dexatoupi",
+    "ApiKey":"421234229241695",
+    "ApiSecret":"22MEJH_B-yJyQ0W1yQ7hXt72KA8"
+  }
 }
