--- a/appsettings.json
+++ b/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "AllowedHosts": "*",
-  "cloudinarySettings"{
+  "cloudinarySettings":{
     "CloudName": "dexatoupi",
     "ApiKey":"421234229241695",
     "ApiSecret":"22MEJH_B-yJyQ0W1yQ7hXt72KA8"
